Tried to fix alignment

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -60,7 +60,7 @@
   list-style-type: none;
   white-space: nowrap;
   &--lg {
-    padding-right: 0.25em;
+    padding-right: 0.3em;
     font-size: $type-size-4;
   }
 }
